--- a/public/client/views/admin/admin.view.html
+++ b/public/client/views/admin/admin.view.html
@@ -31,8 +31,8 @@
             <tbody>
             <tr ng-repeat="user in model.users track by $index">
                 <th scope="row">{{$index+1}}</th>
-                <td>{{user.firstname}}</td>
-                <td>{{user.lastname}}</td>
+                <td>{{user.firstName}}</td>
+                <td>{{user.lastName}}</td>
                 <td>{{user.username}}</td>
                 <td><span>{{user.role}}</span>
                 <td><span>{{user.status}}</span>
