--- a/public/client/views/faculty/faculty.view.html
+++ b/public/client/views/faculty/faculty.view.html
@@ -1,55 +1,55 @@
 <div class="header-padding">
 </div>
-    <div class="container-fluid" style="margin-top: 20px">
-        <div class="row">
-            <div class="col-xs-4 col-sm-4 col-md-2 col-lg-2 right-line">
-                <ul class="list-group">
-                    <li  class="list-group-item">
-                        <a href="#/faculty/{{model.fid}}/facultyProfile">
-                            <b style="color: purple">My Profile</b>
-                        </a>
-                    </li>
-                    <li  class="list-group-item">
-                        <a href="#/faculty/{{model.fid}}/facultyAcceptedJobs">
-                            <b style="color: purple"> Accepted Jobs</b>
-                        </a>
-                    </li>
-                    <li  class="list-group-item">
-                        <a href="#/faculty/{{model.fid}}/facultyRejectedJobs">
-                            <b style="color: purple"> Rejected Jobs</b>
-                        </a>
-                    </li>
-                    <li  class="list-group-item">
-                        <a href="#/faculty/{{model.fid}}/facultySuggestedJobs">
-                            <b style="color: purple;"> Suggested Jobs</b>
-                        </a>
-                    </li>
-                    <li  class="list-group-item">
-                        <a href="#/faculty/{{model.fid}}/facultyAllJobs">
-                            <b style="color: purple">All Jobs</b>
-                        </a>
-                    </li>
-                </ul>
-            </div>
-            <div class="col-xs-7 col-sm-7 col-md-7 col-lg-7" style="background-color: white" >
-                <form name="myForm">
-                    <div class="card-body">
-                        <h4 class="card-title" align="center">My Profile</h4>
-                        <div class="card">
-                            <!--<img data-ng-src="images/photo.jpg" alt="Jose" style="width:50%">-->
-                            <h1>{{model.user.username}}</h1>
-                            <p class="title">Professor</p>
-                            <p>Northeastern University</p>
-                            <a href="#"><i class="fa fa-dribbble"></i></a>
-                            <a href="#"><i class="fa fa-twitter"></i></a>
-                            <a href="#"><i class="fa fa-linkedin"></i></a>
-                            <a href="#"><i class="fa fa-facebook"></i></a>
-                        </div>
-
+<div class="container-fluid" style="margin-top: 20px">
+    <div class="row">
+        <div class="col-xs-4 col-sm-4 col-md-2 col-lg-2 right-line">
+            <ul class="list-group">
+                <li  class="list-group-item">
+                    <a href="#/faculty/{{model.fid}}/facultyProfile">
+                        <b style="color: purple">My Profile</b>
+                    </a>
+                </li>
+                <li  class="list-group-item">
+                    <a href="#/faculty/{{model.fid}}/facultyAcceptedJobs">
+                        <b style="color: purple"> Accepted Jobs</b>
+                    </a>
+                </li>
+                <li  class="list-group-item">
+                    <a href="#/faculty/{{model.fid}}/facultyRejectedJobs">
+                        <b style="color: purple"> Rejected Jobs</b>
+                    </a>
+                </li>
+                <li  class="list-group-item">
+                    <a href="#/faculty/{{model.fid}}/facultySuggestedJobs">
+                        <b style="color: purple;"> Suggested Jobs</b>
+                    </a>
+                </li>
+                <li  class="list-group-item">
+                    <a href="#/faculty/{{model.fid}}/facultyAllJobs">
+                        <b style="color: purple">All Jobs</b>
+                    </a>
+                </li>
+            </ul>
+        </div>
+        <div class="col-xs-7 col-sm-7 col-md-7 col-lg-7" style="background-color: white" >
+            <form name="myForm">
+                <div class="card-body">
+                    <h4 class="card-title" align="center">My Profile</h4>
+                    <div class="card">
+                        <!--<img data-ng-src="images/photo.jpg" alt="Jose" style="width:50%">-->
+                        <h1>{{model.user}}</h1>
+                        <p class="title">Professor</p>
+                        <p>Northeastern University</p>
+                        <a href="#"><i class="fa fa-dribbble"></i></a>
+                        <a href="#"><i class="fa fa-twitter"></i></a>
+                        <a href="#"><i class="fa fa-linkedin"></i></a>
+                        <a href="#"><i class="fa fa-facebook"></i></a>
                     </div>
-                </form>
 
-            </div>
- </div>
+                </div>
+            </form>
+
+        </div>
+    </div>
 </div>
 </div>
