--- a/public/client/views/login/login.view.html
+++ b/public/client/views/login/login.view.html
@@ -2,6 +2,7 @@
 
     <form class="form-signin">
 
+        <h6 style="color: #e21a2d;font-weight:bold;padding-left:5px">{{model.message}}</h6>
         <h2 class="form-signin-heading" style="color:#e21a2d">Login to your account</h2>
 
         <input type="text" ng-model="model.user.username" class="form-control" name="username" placeholder="Email Address" required="" autofocus="" />
