--- a/public/client/views/login/login.view.html
+++ b/public/client/views/login/login.view.html
@@ -8,7 +8,7 @@
         <input type="text" ng-model="model.user.username" class="form-control" name="username" placeholder="Email Address" required="" autofocus="" />
         <input type="password" ng-model="model.user.password" class="form-control" name="password" placeholder="Password" required=""/>
 
-        <h5 align="center" style="padding-bottom: 10px"><a href="">Forgot Password</a></h5>
+        <h5 align="center" style="padding-bottom: 10px"><a href="#forgotpassword">Forgot Password</a></h5>
 
         <button ng-click="model.login(model.user)" class="btn redBG btn-danger btn-block">Login</button>
         <!--<button ng-click="model.createUsers()" class="btn redBG btn-danger btn-block">Data Patch</button>-->
